fix(killAura): C02Packet 发送时序问题